fix: navbar spacing and logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1198,7 +1198,24 @@ li {
   text-align: center;
 }
 
+.navbar-toggler {
+  margin-left: auto !important; /* Pushes to the right */
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center !important; /* Centers logo and toggler */
+  padding: 10px 15px;
+}
+
 /*media queries*/
+@media (max-width: 393px) {
+  .navbar-brand img {
+    width: 60px; /* Adjust size */
+    height: auto;
+  }
+}
 @media screen and (max-width: 575.98px) {
   .nav-item {
     margin: 0px 25px 5px !important;
